--- a/medial-queries1/main.css
+++ b/medial-queries1/main.css
@@ -1,3 +1,46 @@
+* {
+  border: 1px solid black;
+}
+
+
 body {
   background: blanchedalmond;
+}
+
+div {
+  margin: 1em;
+}
+
+.container {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.a .c {
+  flex-grow: 1;
+}
+
+.b {
+  flex-grow: 3;
+}
+
+@media (min-width: 720px) {
+  .container {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .a {
+    width: 100%;
+  }
+
+  .c {
+    min-width: 20vw;
+  }
+
+  * {
+    color: blue;
+  }
 }
